<resources>
    <string name="app_name">CaseClosedFunctional</string>
    <string name="personal_info">Personal Info</string>
    <string name="enter">Enter</string>
    <string name="age">Age: </string>
    <string name="live_in_nurse">Do you live in a nursing home/assisted living/long-term care facility? </string>
    <string name="plan_on_nurse">Do you currently/plan on visiting a healthcare facility for work or volunteering?</string>
    <string name="conditions">Do you have any of the following health conditions? Check all that apply</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_dashboard">Your Dashboard</string>
</resources>