<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/personal_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_personal"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="79dp"
            android:layout_marginRight="79dp"
            android:layout_toStartOf="@+id/numberPicker"
            android:layout_toLeftOf="@+id/numberPicker"
            android:text="@string/age"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="16sp" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_personal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="123dp"
            />

        <TextView
            android:id="@+id/live_in_nurse"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="54dp"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="65dp"
            android:text="@string/live_in_nurse"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/group_nurse"
            android:layout_width="104dp"
            android:layout_height="40dp"
            android:layout_below="@+id/numberPicker"
            android:layout_alignRight="@+id/live_in_nurse"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="51dp"
            android:layout_toEndOf="@+id/live_in_nurse"
            android:layout_toRightOf="@+id/live_in_nurse"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yes_nurse"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/no_nurse"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/plan_on_nurse"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/live_in_nurse"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="53dp"
            android:layout_marginLeft="53dp"
            android:layout_marginTop="39dp"
            android:text="@string/plan_on_nurse"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/group_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_nurse"
            android:layout_alignRight="@+id/plan_on_nurse"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="50dp"
            android:layout_toEndOf="@+id/plan_on_nurse"
            android:layout_toRightOf="@+id/plan_on_nurse"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yes_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/no_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/conditions"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plan_on_nurse"
            android:layout_marginTop="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="54dp"
            android:layout_marginLeft="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:text="@string/conditions"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="16sp" />

        <CheckBox android:id="@+id/checkbox_lung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chronic lung failure/severe asthma"
            android:layout_below="@+id/conditions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"/>

        <CheckBox android:id="@+id/checkbox_diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diabetes with complications"
            android:layout_below="@+id/checkbox_lung"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" />

        <CheckBox android:id="@+id/checkbox_neurologic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Neurologic conditions that weaken ability to cough"
            android:layout_below="@+id/checkbox_diabetes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" />

        <CheckBox android:id="@+id/checkbox_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weakened immune system"
            android:layout_below="@+id/checkbox_neurologic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" />

        <CheckBox android:id="@+id/checkbox_dialysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dialysis"
            android:layout_below="@+id/checkbox_heart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"/>

        <CheckBox android:id="@+id/checkbox_liver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cirrhosis of the liver"
            android:layout_below="@+id/checkbox_dialysis"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" />

        <CheckBox android:id="@+id/checkbox_preg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pregnancy"
            android:layout_below="@+id/checkbox_liver"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" />

        <CheckBox android:id="@+id/checkbox_obese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Extreme Obesity"
            android:layout_below="@+id/checkbox_preg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_obese"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/enter"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>